added authenticated post view

--- a/styles.css
+++ b/styles.css
@@ -50,8 +50,7 @@
   }
 
   .post {
-
-    border: 1px solid black;
+    box-shadow: 2px 2px 2px #ffa952;
     max-width: 40%;
     min-width: 40%;
     margin: 1em;
@@ -88,4 +87,14 @@
 
 .new-post button {
   max-width: 50px;
+}
+
+.my-post {
+  box-shadow: 2px 2px 2px #ffa952;
+  border: 2px solid  #ef5a5a;
+  max-width: 40%;
+  min-width: 40%;
+  margin: 1em;
+  padding: 1em;
+  background-color: white;
 }
